add new changes

--- a/dalhousie.html
+++ b/dalhousie.html
@@ -1,12 +1,11 @@
 
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Shimla</title>
+  <title>Welcome to Dalhousie</title>
   <style>
     body {
       margin: 0;
@@ -87,51 +86,48 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Shimla</h1>
-    <p>Explore the Queen of Hills and its beautiful attractions 🏔️</p>
-    
-
-
+    <h1>Welcome to Dalhousie</h1>
+    <p>Explore the serene hill station and its beautiful attractions 🏔️</p>
   </header>
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/The_Ridge%2C_Shimla.jpg" alt="The Ridge">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Panorama_Dalhousie_Himachal_Pradesh.jpg" alt="Dalhousie View">
       <div class="place-text">
-        <h2>The Ridge</h2>
-        <p>The cultural hub of Shimla, offering stunning views of the mountains and colonial architecture.</p>
+        <h2>Panorama View</h2>
+        <p>Breathtaking views of the Dhauladhar ranges and lush pine forests surround Dalhousie.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Mall_Road_Shimla.jpg" alt="Mall Road Shimla">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/St._John%27s_Church_Dalhousie.jpg" alt="St. John's Church">
+      <div class="place-text">
+        <h2>St. John's Church</h2>
+        <p>Historic colonial church built during the British era, known for its peaceful ambience.</p>
+      </div>
+    </div>
+
+    <div class="place">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Panchpula_Dalhousie.jpg" alt="Panchpula">
+      <div class="place-text">
+        <h2>Panchpula</h2>
+        <p>A famous picnic spot surrounded by scenic landscapes, named after five water springs.</p>
+      </div>
+    </div>
+
+    <div class="place">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Khajjiar_Valley.jpg" alt="Khajjiar">
+      <div class="place-text">
+        <h2>Khajjiar</h2>
+        <p>Often called the "Mini Switzerland of India," this valley offers lush meadows and a peaceful lake.</p>
+      </div>
+    </div>
+
+    <div class="place">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Dalhousie_Mall_Road.jpg" alt="Mall Road Dalhousie">
       <div class="place-text">
         <h2>Mall Road</h2>
-        <p>The heart of Shimla, lined with shops, cafes, and restaurants. Perfect for evening strolls.</p>
-      </div>
-    </div>
-
-    <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/Jakhoo_temple.jpg" alt="Jakhoo Temple">
-      <div class="place-text">
-        <h2>Jakhoo Temple</h2>
-        <p>Dedicated to Lord Hanuman, Jakhoo Temple is located on the highest peak of Shimla with breathtaking views.</p>
-      </div>
-    </div>
-
-    <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Kufri_Snow_View.jpg" alt="Kufri">
-      <div class="place-text">
-        <h2>Kufri</h2>
-        <p>A small hill station near Shimla, famous for snow sports and panoramic views of the Himalayas.</p>
-      </div>
-    </div>
-
-    <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Christ_Church_Shimla.jpg" alt="Christ Church">
-      <div class="place-text">
-        <h2>Christ Church</h2>
-        <p>One of the oldest churches in North India, known for its neo-Gothic architecture and peaceful ambience.</p>
+        <p>The bustling heart of Dalhousie with shops, cafes, and a perfect spot for leisurely strolls.</p>
       </div>
     </div>
   </section>
