--- a/snowy.html
+++ b/snowy.html
@@ -265,7 +265,16 @@
   }
 ];
 
-  const pages = ['dalhousie.html', 'Manali.html', 'Shim.html', 'Mussoorie.html', 'kashmir.html' , 'Rishekesh.html'];
+//   const pages = ['dalhousie.html', 'Manali.html', 'Shim.html', 'Mussorie.html', 'kashmir.html' , 'Rishekesh.html'];
+const pages = [
+  'dalhousie.html',  // Dalhousie
+  'Manali.html',     // Manali
+  'Shim.html',       // Shimla
+  'Muss0orie.html',  // Mussoorie
+  'kashmir.html',    // Kashmir
+  'Rishekesh.html'   // Rishikesh
+];
+
 
   const grid = document.getElementById('grid');
   
