--- a/project.html
+++ b/project.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="project.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
+
+  a {
+    text-decoration: none; /* Remove underline from links */
+    color: inherit;        /* Keep text color same as original */
+  }
+
+
     /* Suggestions dropdown style */
     .suggestions {
       border: 1px solid #ccc;
