--- a/project.html
+++ b/project.html
@@ -121,7 +121,7 @@
       <a href="pilgrimage.html">
         <div class="trip-card">
           <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
-          <h3>Best Choices for Historical Paris</h3>
+          <h3>Best Choices for Pligrimage </h3>
           <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
         </div>
       </a>
