--- a/snowy.html
+++ b/snowy.html
@@ -270,7 +270,7 @@ const pages = [
   'dalhousie.html',  // Dalhousie
   'Manali.html',     // Manali
   'Shim.html',       // Shimla
-  'Muss0orie.html',  // Mussoorie
+  'Mussoorie.html',  // Mussoorie
   'kashmir.html',    // Kashmir
   'Rishekesh.html'   // Rishikesh
 ];
