--- a/project.html
+++ b/project.html
@@ -122,7 +122,7 @@
         <div class="trip-card">
           <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
           <h3>Best Choices for Pligrimage </h3>
-          <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
+          <p>Explore India's spiritual gems: Kedarnath, Varanasi, Golden Temple, Jagannath Puri, and Meenakshi Temple.</p>
         </div>
       </a>
     </div>
