--- a/goa.html
+++ b/goa.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Mumbai</title>
+  <title>Welcome to Goa</title>
   <style>
     body {
       margin: 0;
@@ -85,48 +84,48 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Mumbai</h1>
-    <p>Explore the famous beaches and iconic landmarks of Mumbai 🌊🏙️</p>
+    <h1>Welcome to Goa</h1>
+    <p>Relax, explore, and enjoy the sunny beaches and vibrant culture of Goa 🏖️</p>
   </header>
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/37/Juhu_Beach_Mumbai.jpg" alt="Juhu Beach">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Calangute_Beach_Goa_India.jpg" alt="Calangute Beach">
       <div class="place-text">
-        <h2>Juhu Beach</h2>
-        <p>One of Mumbai’s most popular beaches, bustling with street food stalls, sunset views, and lively crowds.</p>
+        <h2>Calangute Beach</h2>
+        <p>One of Goa's most popular beaches, known for its lively atmosphere, water sports, and nightlife.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Chowpatty_beach_mumbai.JPG" alt="Chowpatty Beach">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Basilica_of_Bom_Jesus_Goa.jpg" alt="Basilica of Bom Jesus">
       <div class="place-text">
-        <h2>Chowpatty Beach</h2>
-        <p>A famous city beach near Marine Drive, known for food stalls, Ganesh Visarjan ceremonies, and evening strolls.</p>
+        <h2>Basilica of Bom Jesus</h2>
+        <p>A UNESCO World Heritage Site and iconic church holding the mortal remains of St. Francis Xavier.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Gateway_of_India_in_Mumbai_1.jpg" alt="Gateway of India">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/Anjuna_Beach_Goa.jpg" alt="Anjuna Beach">
       <div class="place-text">
-        <h2>Gateway of India</h2>
-        <p>The iconic monument overlooking the Arabian Sea, symbolizing Mumbai’s rich colonial heritage.</p>
+        <h2>Anjuna Beach</h2>
+        <p>Famous for its vibrant flea market, stunning sunsets, and relaxed bohemian vibe.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Marine_Drive_Night_View.jpg" alt="Marine Drive">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chapora_Fort_Goa.jpg" alt="Chapora Fort">
       <div class="place-text">
-        <h2>Marine Drive</h2>
-        <p>The scenic promenade along the coastline, famous for sunset views and the “Queen’s Necklace” lights at night.</p>
+        <h2>Chapora Fort</h2>
+        <p>Offers panoramic views of the Arabian Sea and the surrounding coastline, perfect for photography and history lovers.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Sanjay_Gandhi_National_Park.jpg" alt="Sanjay Gandhi National Park">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Mangueshi_Temple_Goa.jpg" alt="Shri Mangueshi Temple">
       <div class="place-text">
-        <h2>Sanjay Gandhi National Park</h2>
-        <p>A lush green sanctuary within the city, offering hiking trails, wildlife, and the historic Kanheri Caves.</p>
+        <h2>Shri Mangueshi Temple</h2>
+        <p>A renowned Hindu temple in Goa, famous for its beautiful architecture and peaceful surroundings.</p>
       </div>
     </div>
   </section>
