--- a/project.html
+++ b/project.html
@@ -117,7 +117,7 @@
        </a>
 
       
-     <!-- Paris -->
+     <!-- Mandir -->
       <a href="pilgrimage.html">
         <div class="trip-card">
           <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
