--- a/Kedarnath.html
+++ b/Kedarnath.html
@@ -1,11 +1,9 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Banaras</title>
+  <title>Welcome to Kedarnath</title>
   <style>
     body {
       margin: 0;
@@ -86,48 +84,48 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Banaras</h1>
-    <p>Discover the spiritual and cultural heart of India 🌊🛕</p>
+    <h1>Welcome to Kedarnath</h1>
+    <p>Explore the sacred temple and stunning Himalayan scenery 🏔️🕉️</p>
   </header>
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Kashi_Vishwanath_Temple.jpg" alt="Kashi Vishwanath Temple">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Kedarnath_Temple_view.jpg" alt="Kedarnath Temple">
       <div class="place-text">
-        <h2>Kashi Vishwanath Temple</h2>
-        <p>One of the most famous Hindu temples dedicated to Lord Shiva, located on the western bank of the Ganges.</p>
+        <h2>Kedarnath Temple</h2>
+        <p>The ancient Hindu temple dedicated to Lord Shiva, part of the Chota Char Dham pilgrimage in Uttarakhand.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Dashashwamedh_Ghat_Varanasi.jpg" alt="Dashashwamedh Ghat">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Gaurikund_Uttarakhand.jpg" alt="Gaurikund">
       <div class="place-text">
-        <h2>Dashashwamedh Ghat</h2>
-        <p>The most prominent ghat on the Ganges, famous for evening Ganga Aarti and vibrant rituals.</p>
+        <h2>Gaurikund</h2>
+        <p>The base camp village for Kedarnath trek, famous for its natural hot water springs and scenic beauty.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Sarnath_Dhamek_Stupa.jpg" alt="Sarnath">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/77/Chorabari_Lake_Kedarnath.jpg" alt="Chorabari Lake">
       <div class="place-text">
-        <h2>Sarnath</h2>
-        <p>The site where Buddha delivered his first sermon, known for stupas, temples, and Buddhist monuments.</p>
+        <h2>Chorabari Lake</h2>
+        <p>Also known as Gandhi Sarovar, a glacial lake near Kedarnath temple, reflecting the surrounding Himalayan peaks.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/Manikarnika_Ghat_Varanasi.jpg" alt="Manikarnika Ghat">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Bhagirathi_River_Kedarnath.jpg" alt="Bhagirathi River">
       <div class="place-text">
-        <h2>Manikarnika Ghat</h2>
-        <p>One of the oldest and most sacred ghats in Varanasi, associated with cremation rituals along the Ganges.</p>
+        <h2>Bhagirathi River</h2>
+        <p>The sacred river flowing through Kedarnath valley, adding serenity and scenic beauty to the pilgrimage.</p>
       </div>
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Ramnagar_Fort.jpg" alt="Ramnagar Fort">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Nearby_Himalayan_Peaks_Kedarnath.jpg" alt="Himalayan Views">
       <div class="place-text">
-        <h2>Ramnagar Fort</h2>
-        <p>A historic fort on the eastern bank of the Ganges, showcasing royal architecture and a museum of artifacts.</p>
+        <h2>Himalayan Views</h2>
+        <p>Breathtaking views of snow-clad peaks and valleys surrounding Kedarnath, perfect for nature and photography enthusiasts.</p>
       </div>
     </div>
   </section>
