Add videos in home page

--- a/project.html
+++ b/project.html
@@ -32,6 +32,21 @@
   </style>
 </head>
 <body>
+
+  <body>
+  <!-- Background Video -->
+  <div class="video-background">
+    <video autoplay muted loop id="bg-video">
+      <source src="mountains bg.mp4" type="video/mp4">
+    </video>
+  </div>
+
+  <!-- Baaki aapka existing content (navbar, heading, form, etc.) -->
+  <div class="main-content">
+    <!-- Yaha aapka Plan & Go wala pura content rahega -->
+  </div>
+</body>
+
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">Plan & Go ✈</div>
@@ -116,8 +131,7 @@
       </a>
     </div>
   </section>
-
-  <!-- Script -->
+  
   <script>
   
 // Navbar update if logged in
