--- a/project.html
+++ b/project.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="project.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
     /* Suggestions dropdown style */
     .suggestions {
       border: 1px solid #ccc;
@@ -121,7 +125,6 @@
         </div>
        </a>
 
-<<<<<<< HEAD
       
      <!-- Mandir -->
       <a href="pilgrimage.html">
@@ -129,19 +132,9 @@
           <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
           <h3>Best Choices for Pligrimage </h3>
           <p>Explore India's spiritual gems: Kedarnath, Varanasi, Golden Temple, Jagannath Puri, and Meenakshi Temple.</p>
-=======
-      <!-- Paris -->
-      <a href="rain.html">
-        <div class="trip-card">
-          <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
-          <h3>Best Choices for Rain Retreat</h3>
-          <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
->>>>>>> dd37fc7f1ac1ec26f738c49bbdf6d8ba5709937b
-        </div>
-      </a>
-    </div>
+
   </section>
-  
+
   <script>
   
 // Navbar update if logged in
