--- a/Salasar.html
+++ b/Salasar.html
@@ -91,7 +91,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Salasar_Balaji_Temple.jpg" alt="Salasar Balaji Temple">
+      <img src="balaji.png" alt="Salasar Balaji Temple">
       <div class="place-text">
         <h2>Salasar Balaji Temple</h2>
         <p>A famous Hanuman temple in Salasar, Rajasthan, known for its devotion, miracles, and vibrant festivals.</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Salasar_Fair.jpg" alt="Temple Fair">
+      <img src="fare.png" alt="Temple Fair">
       <div class="place-text">
         <h2>Annual Temple Fair</h2>
         <p>The temple hosts a huge fair during Hanuman Jayanti, attracting devotees from all over India.</p>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Rural_Rajasthan.jpg" alt="Local Village">
+      <img src="" alt="Local Village">
       <div class="place-text">
         <h2>Local Village Surroundings</h2>
         <p>Experience the rural charm of Rajasthan around Salasar, with traditional houses and serene landscapes.</p>
