--- a/Salasar.html
+++ b/Salasar.html
@@ -107,7 +107,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="Local Village">
+      <img src="village.png" alt="Local Village">
       <div class="place-text">
         <h2>Local Village Surroundings</h2>
         <p>Experience the rural charm of Rajasthan around Salasar, with traditional houses and serene landscapes.</p>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Desert_Rajasthan.jpg" alt="Desert Views">
+      <img src="dessert.png" alt="Desert Views">
       <div class="place-text">
         <h2>Desert Views</h2>
         <p>Enjoy the unique Thar Desert landscape near Salasar, with sand dunes and breathtaking sunsets.</p>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Pilgrims_at_Salasar.jpg" alt="Pilgrims">
+      <img src="" alt="Pilgrims">
       <div class="place-text">
         <h2>Pilgrims Gathering</h2>
         <p>The temple is a hub for devotees, offering a spiritual experience and a sense of community.</p>
