--- a/Salasar.html
+++ b/Salasar.html
@@ -123,7 +123,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="Pilgrims">
+      <img src="gathering.png" alt="Pilgrims">
       <div class="place-text">
         <h2>Pilgrims Gathering</h2>
         <p>The temple is a hub for devotees, offering a spiritual experience and a sense of community.</p>
