--- a/Vrindavan.html
+++ b/Vrindavan.html
@@ -90,7 +90,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/BANKI_TEMPLE_VRINDAVAN.jpg" alt="Bankey Bihari Temple">
+      <img src="bakey.png" alt="Bankey Bihari Temple">
       <div class="place-text">
         <h2>Bankey Bihari Temple</h2>
         <p>One of the most famous Krishna temples in Vrindavan, known for its beautiful idol and devotional atmosphere.</p>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/ISKCON_Vrindavan_Temple.jpg" alt="ISKCON Temple">
+      <img src="" alt="ISKCON Temple">
       <div class="place-text">
         <h2>ISKCON Temple</h2>
         <p>A modern temple dedicated to Lord Krishna, known for spiritual activities, bhajans, and cultural programs.</p>
@@ -106,7 +106,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/Radha_Rani_Temple_Vrindavan.jpg" alt="Radha Rani Temple">
+      <img src="" alt="Radha Rani Temple">
       <div class="place-text">
         <h2>Radha Rani Temple</h2>
         <p>An ancient temple devoted to Goddess Radha, attracting devotees with its rich history and spiritual ambiance.</p>
