--- a/Vrindavan.html
+++ b/Vrindavan.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="Radha Rani Temple">
+      <img src="radha.png" alt="Radha Rani Temple">
       <div class="place-text">
         <h2>Radha Rani Temple</h2>
         <p>An ancient temple devoted to Goddess Radha, attracting devotees with its rich history and spiritual ambiance.</p>
