--- a/Vrindavan.html
+++ b/Vrindavan.html
@@ -98,7 +98,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="ISKCON Temple">
+      <img src="radha.png" alt="ISKCON Temple">
       <div class="place-text">
         <h2>ISKCON Temple</h2>
         <p>A modern temple dedicated to Lord Krishna, known for spiritual activities, bhajans, and cultural programs.</p>
@@ -106,7 +106,7 @@
     </div>
 
     <div class="place">
-      <img src="radha.png" alt="Radha Rani Temple">
+      <img src="radhaR.png" alt="Radha Rani Temple">
       <div class="place-text">
         <h2>Radha Rani Temple</h2>
         <p>An ancient temple devoted to Goddess Radha, attracting devotees with its rich history and spiritual ambiance.</p>
@@ -114,7 +114,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Yamuna_Ghat_Vrindavan.jpg" alt="Yamuna Ghat">
+      <img src="" alt="Yamuna Ghat">
       <div class="place-text">
         <h2>Yamuna Ghat</h2>
         <p>The holy ghats along the Yamuna River, where devotees perform rituals, aarti, and take holy dips.</p>
@@ -122,7 +122,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0a/Nidhivan_Vrindavan.jpg" alt="Nidhivan">
+      <img src="nidhivan.png" alt="Nidhivan">
       <div class="place-text">
         <h2>Nidhivan</h2>
         <p>A sacred grove associated with Lord Krishna's pastimes, famous for its mystical stories and spiritual aura.</p>
