--- a/project.html
+++ b/project.html
@@ -107,7 +107,7 @@
       <!-- Shimla -->
       <a href="snowy.html">
         <div class="trip-card">
-          <img src="Shimla.png" alt="Shimla Family Trip">
+          <img src="https://img.freepik.com/premium-photo/child-building-snowman-kids-build-snow-man-boy-girl-playing-outdoors-snowy-winter-day-outdoor-family-fun-christmas-vacation-mountains_1028938-177583.jpg" alt="Shimla Family Trip">
           <h3>Best Choices for Snowy Retreat</h3>
           <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
         </div>
@@ -117,7 +117,7 @@
       <a href="sunny.html">
         <div class="trip-card">
           <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
-          <h3>Best Choices for Sunny Shores Retreat</h3>
+          <h3>Best Choices for Sunny Shores </h3><br>
           <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
         </div>
       </a>
@@ -125,8 +125,8 @@
       <!-- Mandir -->
       <a href="pilgrimage.html">
         <div class="trip-card">
-          <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
-          <h3>Best Choices for Pligrimage </h3>
+          <img src="https://images.nativeplanet.com/img/2017/09/04-1504499382-8.jpg" alt="Mandi">
+          <h3>Best Choices for Pligrimage</h3>
           <p>Explore India's spiritual gems: Kedarnath, Varanasi, Golden Temple, Jagannath Puri, and Meenakshi Temple.</p>
         </div>
       </a>
