--- a/Vrindavan.html
+++ b/Vrindavan.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="Yamuna Ghat">
+      <img src="ghat.png" alt="Yamuna Ghat">
       <div class="place-text">
         <h2>Yamuna Ghat</h2>
         <p>The holy ghats along the Yamuna River, where devotees perform rituals, aarti, and take holy dips.</p>
