--- a/Banaras.html
+++ b/Banaras.html
@@ -92,7 +92,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Kashi_Vishwanath_Temple.jpg" alt="Kashi Vishwanath Temple">
+      <img src="kashi.png" alt="Kashi Vishwanath Temple">
       <div class="place-text">
         <h2>Kashi Vishwanath Temple</h2>
         <p>One of the most famous Hindu temples dedicated to Lord Shiva, located on the western bank of the Ganges.</p>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Dashashwamedh_Ghat_Varanasi.jpg" alt="Dashashwamedh Ghat">
+      <img src="Dghat.png" alt="Dashashwamedh Ghat">
       <div class="place-text">
         <h2>Dashashwamedh Ghat</h2>
         <p>The most prominent ghat on the Ganges, famous for evening Ganga Aarti and vibrant rituals.</p>
@@ -108,7 +108,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Sarnath_Dhamek_Stupa.jpg" alt="Sarnath">
+      <img src="sarnath.png" alt="Sarnath">
       <div class="place-text">
         <h2>Sarnath</h2>
         <p>The site where Buddha delivered his first sermon, known for stupas, temples, and Buddhist monuments.</p>
@@ -116,7 +116,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/Manikarnika_Ghat_Varanasi.jpg" alt="Manikarnika Ghat">
+      <img src="mani.png" alt="Manikarnika Ghat">
       <div class="place-text">
         <h2>Manikarnika Ghat</h2>
         <p>One of the oldest and most sacred ghats in Varanasi, associated with cremation rituals along the Ganges.</p>
@@ -124,7 +124,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Ramnagar_Fort.jpg" alt="Ramnagar Fort">
+      <img src="" alt="Ramnagar Fort">
       <div class="place-text">
         <h2>Ramnagar Fort</h2>
         <p>A historic fort on the eastern bank of the Ganges, showcasing royal architecture and a museum of artifacts.</p>
